syntax = "proto3";

package blob;

option go_package = "github.com/kannachi323/homelib/protob";

import "google/protobuf/timestamp.proto";

message Blob {
  string srcClientID = 1;
  string dstClientID = 2;
  string groupID = 3;
  google.protobuf.Timestamp timestamp = 4;
  int64 size = 5;
  bytes data = 6;
  string file_name = 7;
  string file_type = 8;
  int32 chunk_index = 9;
  int32 total_chunks = 10;
  string task_id = 11;
}
